--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,30 @@
 version: '3'
 
 services:
-  spot-follow:
+  server:
     build:
       dockerfile: Dockerfile
-      context: ./spot-follow
+      context: ./spot-follow/server
     env_file: secrets/spot_account.env
-    environment:
-      - DISPLAY=unix${DISPLAY}
-    volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix
-    network_mode: host
+    #network_mode: host
     #platform: linux/amd64
     stdin_open: true # docker run -i
     tty: true # docker run -t
+    networks: 
+     - spot-net
+    ports:
+     - "65432:65432"
+
+  client:
+    build:
+      dockerfile: Dockerfile
+      context: ./spot-follow/client
+    env_file: secrets/spot_account.env
+    networks: 
+     - spot-net
+    ports:
+     - "65433:65432"
+  
+networks:
+  spot-net:
+    driver: "bridge"
