Added additional support for cameras

--- a/spot-follow/Dockerfile
+++ b/spot-follow/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.6
 WORKDIR /usr/src/app
 # Any instructions for building the container will be based off of this file location in the OS
 
+# Creates a directory to store images taken by the cameras
+RUN mkdir /usr/src/app/imgs
+
 COPY requirements.txt ./
 # Copying requirements.txt from our source folder on the HOST (our) machine into the container at this location RELATIVE to the WORKDIR (i.e /usr/src/app/.)
 RUN pip install --no-cache-dir -r requirements.txt
