--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./spot-follow
+    volumes:
+      - ./spot-follow/imgs:/usr/src/app/imgs  # connects folder on local machine to folder in container to view images easily
     env_file: secrets/spot_account.env
     stdin_open: true # docker run -i
     tty: true # docker run -t
