Added tkinter app to ContainerlessClient.py; updated Read Me

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     tty: true # docker run -t
     networks: 
      - spot-net
-    ports:
-     - "65432:65432"
+    #ports:
+    # - "65432:65432"
 
   client:
     build:
